--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,18 @@
-@import url("https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&display=swap');
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer base {
+  html {
+    font-family: 'Fira Code', monospace;
+    font-synthesis: none;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+}
 
 :root {
   --black: #010c15;
@@ -31,7 +45,6 @@
 
 body {
   margin: 0;
-  font-family: "Fira Code", monospace;
   background: var(--black);
   color: var(--grey-color);
   width: 100vw;
